--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,4 @@
 {
   "extends": "@toruslabs/config/tsconfig.default.json",
-  "include": ["src"],
-  "compilerOptions": {
-    "allowJs": true
-  }
+  "include": ["src", "test"]
 }
