--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,37 @@
-name: Continuous Integration
-on: [push, pull_request]
+on:
+  push:
+    branches-ignore:
+      - "master"
+
+name: Run Tests
 
 jobs:
   test:
-    name: Test
-    runs-on: ${{ matrix.os }}
-
+    name: run tests
     strategy:
-      fail-fast: false
       matrix:
+        node: ["24.x"]
         os: [ubuntu-latest]
-        node-version: ["22", "20"]
 
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Checkout project
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          check-latest: true
+          node-version: ${{ matrix.node }}
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Install playwright webkit
         run: npx playwright install-deps webkit
 
-      - name: Test
-        run: npx playwright install && npm run test
+      - name: Install browsers
+        run: npx playwright install
+
+      - name: Run tests
+        run: npm run test
